--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             transition: width linear;
         }
     </style>
+    <link rel="stylesheet" href="styles.css">
+​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
 </head>
 <body>
     <h1>Game Hub</h1>
